# Caeli

./: CMakeLists.txt  Caeli-client.service  Caeli-client.timer  Caeli-server.service  Doxyfile  Gemfile  LICENCE  README.md  _config.yml  index.md
_layouts/: default.html
src/Client/: CMakeLists.txt  bdd.c  bdd.h  client.c  client.h
src/Materiel/: CMakeLists.txt  grove_dht.c  grove_dht.h  grove_rgb_lcd.c  grove_rgb_lcd.h  grovepi.c  grovepi.h  materiel.h
src/Protocole/: protocole.c  protocole.h
src/Protocole/Reponses/: reponses.c  reponses.h
src/Protocole/Requetes/: requetes.c  requetes.h
src/Reseau/: reseau.c  reseau.h
src/Serveur/: serveur.c  serveur.h
src/Utilitaires/: clock.c  clock.h  signaux.c  signaux.h  utils.h  utils.h~
